--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint ../../../Downloads/project",
+    "lint": "eslint ../../../../Downloads/project",
     "preview": "vite preview"
   },
   "dependencies": {
