Integrate Mistral API for message handling.
Added new message handling functionality connected to the Mistral API, including controller, route, and service implementations. Updated environment variables, dependencies, and swagger configuration accordingly. Changed the server port to 6000 and refined error handling in the server initialization process.

--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,7 @@
 JWT_SECRET=CESTSUPERSECRET
-MONGO_URI=mongodb://localhost:27017/voice-assistant
-PORT=3000
+MONGO_URI=mongodb://assVoc:vocAss123%40@localhost:27017
+PORT=6000
+MISTRAL_API_URL=https://api.mistral.ai/v1/messages
+MISTRAL_API_KEY=c7Hd9uRKTyKpNM7ZfGewm5hwzNn4m4lv
 
 WEATHER_API_KEY=220bc2626bf34d55847130523252001
