--- a/backend/package.json
+++ b/backend/package.json
@@ -9,9 +9,12 @@
     "build": "tsc"
   },
   "dependencies": {
+    "@mistralai/mistralai": "^1.3.6",
+    "axios": "^1.7.9",
     "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.3",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2",
+    "express": "^4.21.2",
     "express-validator": "^6.15.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.5.1",
@@ -19,11 +22,12 @@
     "swagger-ui-express": "^4.6.3"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.4",
     "@types/bcrypt": "^5.0.0",
-    "@types/express": "^4.17.15",
+    "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/mongoose": "^5.11.97",
-    "@types/node": "^20.5.7",
+    "@types/node": "^20.17.14",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.5",
     "ts-node-dev": "^2.0.0",
