Implement weather integration and improve Mistral messaging
Added weather integration into the Mistral service to handle specific actions like retrieving weather info for a location. Enhanced error handling, logging, and Swaggers docs while updating the port configuration and routing.

--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,9 @@
 JWT_SECRET=CESTSUPERSECRET
 MONGO_URI=mongodb://assVoc:vocAss123%40@localhost:27017
-PORT=6000
+PORT=7000
 MISTRAL_API_URL=https://api.mistral.ai/v1/messages
 MISTRAL_API_KEY=c7Hd9uRKTyKpNM7ZfGewm5hwzNn4m4lv
+MISTRAL_AGENT_ID=ag:d7b686b9:20250120:untitled-agent:1fa225f7
+
 
 WEATHER_API_KEY=220bc2626bf34d55847130523252001
